--- a/admin/wpquiz.css
+++ b/admin/wpquiz.css
@@ -2,6 +2,18 @@
     padding-right: 30px;
 }
 
+.gap-5 {height: 5px; flex: auto; width: 100%;}
+
+.wpquiz-header {
+    min-height: 90px;
+    padding: 18px 52px;
+    margin: 0 -30px 30px -21px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    background-color: #607d8b;
+}
+
 table.wpquizes {
     width: 100%;
     border-collapse: collapse;
@@ -28,11 +40,22 @@ table.wpquizes .title {font-size: 16px}
     display: inline-block;
     text-decoration: none;
     cursor: pointer;
+    font-weight: 600;
     background-color: #FECF2F;
     border-radius: 50px;
 }
 
 .wpquiz-btn:hover {color: #333;}
+
+.wpquiz-btn.small {
+    font-size: 11px;
+    padding: 2px 10px;
+    font-weight: 700;
+}
+
+.wpquiz-btn.purple {color: #fff; font-weight: 500!important; background-color: #8D00B1}
+
+
 
 .wpquizes .meta {
     color: #778699;
@@ -42,11 +65,11 @@ table.wpquizes .title {font-size: 16px}
 }
 
 .wpquiz {
-    --gap: 25px;
+    --gap: 30px;
     --bdcolor: #E6E6E6;
-    padding: 0 var(--gap) var(--gap);
+    padding: 40px var(--gap);
     background-color: #fff;
-    border-radius: 3px;
+    border-radius: 4px;
 }
 
 .wpquiz header {
@@ -54,7 +77,7 @@ table.wpquizes .title {font-size: 16px}
     align-items: center;
     min-height: 40px;
     padding: 10px var(--gap);
-    margin: 0 calc(var(--gap) * -1) var(--gap);
+    margin: -40px calc(var(--gap) * -1) 30px!important;
     border-bottom: 1px solid var(--bdcolor);
 }
 
@@ -100,7 +123,7 @@ table.wpquizes .title {font-size: 16px}
 .question {
     display: grid;
     row-gap: 30px;
-    column-gap: 30px;
+    column-gap: 50px;
     padding-bottom: 50px;
     border-bottom: 1px solid #ddd;
     margin-bottom: 50px;
@@ -116,6 +139,7 @@ table.wpquizes .title {font-size: 16px}
 
 .question>.label {margin-top: 8px}
 
+.question>h3.label {margin-top: 10px}
 .question>h3.label, .question>div.label h3 {
     margin-bottom: 0;
     font-size: 16px;
@@ -177,8 +201,8 @@ ul.answers>li:last-child {
 ul.answers>li:before {
     content: attr(data-no)".";
     position: absolute;
-    left: -40px;
-    width: 30px;
+    left: -30px;
+    width: 25px;
     height: 40px;
     top: 50%;
     line-height: 40px;
