--- a/admin/wpquiz.css
+++ b/admin/wpquiz.css
@@ -1,8 +1,10 @@
 #wpquiz-app {
+    line-height: 1.7;
     padding-right: 30px;
 }
 
-.gap-5 {height: 5px; flex: auto; width: 100%;}
+.gap {height: 10px; flex: auto; width: 100%;}
+.gap-5 {height: 5px}
 
 .wpquiz-header {
     min-height: 90px;
@@ -106,7 +108,7 @@ table.wpquizes .title {font-size: 16px}
     content: "\f531";
     margin-right: 3px;
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
     width: 20px;
     line-height: 20px;
     font-family: dashicons;
@@ -152,27 +154,22 @@ table.wpquizes .title {font-size: 16px}
     font-size: 13px;
 }
 
-.question>div.label h3 {margin-bottom: 5px;}
-
 .question input {
     color: #333;
-    height: 40px;
+    height: auto;
     font-size: 15px;
     font-weight: 500;;
-    padding: 10px 15px;
+    padding: 5px 15px;
+    line-height: 34px;
     border: 1px solid #ddd;
     background-color: #FAFAFA;
     border-radius: 4px;
     outline: none!important;
 }
 
-ul.answers{
-    border-radius: 5px;
-}
+ul.answers{border-radius: 5px}
 
-ul.answers>li {
-    border: 1px solid #E6E6E6;
-}
+ul.answers>li {border: 1px solid #E6E6E6}
 
 .question ul.answers {
     margin: 0;
@@ -201,7 +198,7 @@ ul.answers>li:last-child {
 ul.answers>li:before {
     content: attr(data-no)".";
     position: absolute;
-    left: -30px;
+    left: -32px;
     width: 25px;
     height: 40px;
     top: 50%;
@@ -215,7 +212,18 @@ ul.answers>li input {
     padding: 0;
     height: auto;
     border: none;
-    padding: 15px;
+    padding: 8px 15px;
     flex: 1;
     background-color: transparent;
+}
+
+ul.answers>li .btn-remove {
+    padding: 10px;
+    align-self: center;
+    cursor: pointer;
+    display: none;
+}
+
+ul.answers>li:hover>.btn-remove {
+    display: block;
 }
