--- a/admin/wpquiz.css
+++ b/admin/wpquiz.css
@@ -1,257 +1,310 @@
 #wpquiz-app {
-    line-height: 1.7;
-    padding-right: 30px;
+	line-height: 1.7;
+	padding-right: 30px;
 }
 
-.gap {height: 10px; flex: auto; width: 100%;}
-.gap-5 {height: 5px}
+.gap {
+	height: 10px;
+	flex: auto;
+	width: 100%;
+}
+
+.gap-5 {
+	height: 5px;
+}
 
 .wpquiz-header {
-    min-height: 90px;
-    padding: 18px 52px;
-    margin: 0 -30px 30px -21px;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    background-color: #607d8b;
+	min-height: 90px;
+	padding: 18px 52px;
+	margin: 0 -30px 30px -21px;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	background-color: #607d8b;
 }
 
 table.wpquizes {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #fff;
-    border-radius: 8px;
+	width: 100%;
+	border-collapse: collapse;
+	background-color: #fff;
+	border-radius: 8px;
 }
 
-table.wpquizes tr th, table.wpquizes tr td {
-    padding: 12px 15px;
-    border-width: 1px 0;
-    border-style: solid;
-    border-color: #E6E6E6;
+table.wpquizes tr th,
+table.wpquizes tr td {
+	padding: 12px 15px;
+	border-width: 1px 0;
+	border-style: solid;
+	border-color: #e6e6e6;
 }
 
-table.wpquizes tr td:last-child {width: max-content; text-align: right; padding-right: 40px}
+table.wpquizes tr td:last-child {
+	width: max-content;
+	text-align: right;
+	padding-right: 40px;
+}
 
-table.wpquizes h2, table.wpquizes h3, table.wpquizes h4 {margin: 0}
-table.wpquizes .title {font-size: 16px}
+table.wpquizes h2,
+table.wpquizes h3,
+table.wpquizes h4 {
+	margin: 0;
+}
+
+table.wpquizes .title {
+	font-size: 16px;
+}
 
 .wpquiz-btn {
-    color: #333;
-    font-size: 15px;
-    cursor: pointer;
-    font-weight: 600;
-    padding: 5px 14px;
-    display: inline-flex;
-    text-decoration: none;
-    align-items: center;
-    background-color: #FECF2F;
-    border-radius: 50px;
+	color: #333;
+	font-size: 15px;
+	cursor: pointer;
+	font-weight: 600;
+	padding: 5px 14px;
+	display: inline-flex;
+	text-decoration: none;
+	align-items: center;
+	background-color: #fecf2f;
+	border-radius: 50px;
 }
 
-.wpquiz-btn .dashicons {margin-left: -3px; margin-right: 5px}
+.wpquiz-btn .dashicons {
+	margin-left: -3px;
+	margin-right: 5px;
+}
 
-.wpquiz-btn:hover {color: #333;}
+.wpquiz-btn:hover {
+	color: #333;
+}
 
 .wpquiz-btn.small {
-    font-size: 11px;
-    padding: 2px 10px;
-    font-weight: 700;
+	font-size: 11px;
+	padding: 2px 10px;
+	font-weight: 700;
 }
 
-.wpquiz-btn.purple {color: #fff; font-weight: 500!important; background-color: #8D00B1}
+.wpquiz-btn.purple {
+	color: #fff;
+	font-weight: 500 !important;
+	background-color: #8d00b1;
+}
 
-
-.wpquiz-btn+.wpquiz-btn {margin-left: 7px}
+.wpquiz-btn + .wpquiz-btn {
+	margin-left: 7px;
+}
 
 .wpquizes .meta {
-    color: #778699;
-    display: block;
-    margin-top: 3px;
-    font-size: 12px;
+	color: #778699;
+	display: block;
+	margin-top: 3px;
+	font-size: 12px;
 }
 
 .wpquiz {
-    --gap: 30px;
-    --bdcolor: #E6E6E6;
-    padding: 40px var(--gap);
-    background-color: #fff;
-    border-radius: 4px;
+	--gap: 30px;
+	--bdcolor: #e6e6e6;
+	padding: 40px var(--gap);
+	background-color: #fff;
+	border-radius: 4px;
 }
 
 .wpquiz header {
-    display: flex;
-    align-items: center;
-    min-height: 40px;
-    padding: 10px var(--gap);
-    margin: -40px calc(var(--gap) * -1) 30px!important;
-    border-bottom: 1px solid var(--bdcolor);
+	display: flex;
+	align-items: center;
+	min-height: 40px;
+	padding: 10px var(--gap);
+	margin: -40px calc(var(--gap) * -1) 30px !important;
+	border-bottom: 1px solid var(--bdcolor);
 }
 
 .wpquiz header h3 {
-    margin: 0;
+	margin: 0;
 }
 
-
-
-
 @keyframes saving {
-    to {
-        transform: rotateZ(360deg)
-    }
+	to {
+		transform: rotateZ(360deg);
+	}
 }
 
 @-webkit-keyframes saving {
-    to {
-        transform: rotateZ(360deg)
-    }
+	to {
+		transform: rotateZ(360deg);
+	}
 }
 
-.wpquiz header .btn-save {margin-left: 8px; padding-left: 10px}
-
-.wpquiz header .btn-save .dashicons {
-    margin-right: 3px;
-    text-align: center;
-    font-size: 20px;
-    width: 20px;
-    line-height: 20px;
+.btn-save {
+	margin-left: 8px;
+	padding-left: 10px;
 }
 
-.wpquiz header .btn-save.saving .dashicons {
-    animation: saving 1s infinite ease-in-out;
+.btn-save .dashicons {
+	font-size: 25px;
+	width: 25px;
+	height: 25px;
 }
 
-
-
-
+.btn-save.saving .dashicons {
+	animation: saving 1s infinite ease-in-out;
+}
 
 .question {
-    display: grid;
-    row-gap: 30px;
-    column-gap: 50px;
-    padding-bottom: 50px;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 50px;
-    align-items: flex-start;
-    grid-template-columns: 220px 1fr;
+	display: grid;
+	row-gap: 30px;
+	column-gap: 50px;
+	padding-bottom: 50px;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 50px;
+	align-items: flex-start;
+	grid-template-columns: 220px 1fr;
 }
 
 .question:last-child {
-    margin-bottom: 0;
-    padding-bottom: 0;
-    border-bottom: none;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	border-bottom: none;
 }
 
-.question>.label {margin-top: 8px}
-
-.question>h3.label {margin-top: 10px}
-.question>h3.label, .question>div.label h3 {
-    margin-bottom: 0;
-    font-size: 16px;
+.question > .label {
+	margin-top: 8px;
 }
 
-.question>div.label h3 {margin: 0;}
+.question > h3.label {
+	margin-top: 10px;
+}
 
-.question>div.label {
-    color: #888;
-    font-size: 13px;
+.question > h3.label,
+.question > div.label h3 {
+	margin-bottom: 0;
+	font-size: 16px;
+}
+
+.question > div.label h3 {
+	margin: 0;
+}
+
+.question > div.label {
+	color: #888;
+	font-size: 13px;
 }
 
 .question input {
-    color: #333;
-    height: auto;
-    font-size: 15px;
-    font-weight: 500;;
-    padding: 5px 15px;
-    line-height: 34px;
-    border: 1px solid #ddd;
-    background-color: #FAFAFA;
-    border-radius: 4px;
-    outline: none!important;
+	color: #333;
+	height: auto;
+	font-size: 15px;
+	font-weight: 500;
+	padding: 5px 15px;
+	line-height: 34px;
+	border: 1px solid #ddd;
+	background-color: #fafafa;
+	border-radius: 4px;
+	outline: none !important;
 }
 
-ul.answers{border-radius: 5px}
+ul.answers {
+	border-radius: 5px;
+}
 
-ul.answers>li {border: 1px solid #E6E6E6}
+ul.answers > li {
+	border: 1px solid #e6e6e6;
+}
 
 .question ul.answers {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: 16px;
+	list-style: none;
 }
 
-ul.answers>li{
-    min-height: 18px;
-    position: relative;
-    margin-bottom: -1px;
-    display: flex;
+ul.answers > li {
+	min-height: 18px;
+	position: relative;
+	margin-bottom: -1px;
+	display: flex;
 }
 
-ul.answers>li:first-child {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+ul.answers > li:first-child {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 
-ul.answers>li:last-child {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+ul.answers > li:last-child {
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
-ul.answers>li:before {
-    content: attr(data-no)".";
-    position: absolute;
-    left: -32px;
-    width: 25px;
-    height: 40px;
-    top: 50%;
-    line-height: 40px;
-    margin-top: -20px;
-    font-weight: 700;
-    text-align: right;
+ul.answers > li:before {
+	content: attr(data-no) ".";
+	position: absolute;
+	left: -32px;
+	width: 25px;
+	height: 40px;
+	top: 50%;
+	line-height: 40px;
+	margin-top: -20px;
+	font-weight: 700;
+	text-align: right;
 }
 
-ul.answers>li>.title {
-    padding: 8px 15px;
+ul.answers > li > .title {
+	padding: 8px 15px;
 }
 
-ul.answers>li>* {
-    padding: 0;
-    height: auto;
-    border: none;
-    border-radius: 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    background-color: transparent;
+ul.answers > li > * {
+	padding: 0;
+	height: auto;
+	border: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	background-color: transparent;
 }
 
-ul.answers>li>.title {flex: 1}
-
-ul.answers>li .score {
-    flex: 0 0 auto;
-    width: 60px;
-    text-align: center;
-    border-right: 1px solid #E6E6E6;
+ul.answers > li > .title {
+	flex: 1;
 }
 
-ul.answers>li .btn-remove {
-    width: 40px;
-    display: none;
-    padding: 10px;
-    cursor: pointer;
-    align-self: center;
+ul.answers > li .score {
+	flex: 0 0 auto;
+	width: 60px;
+	text-align: center;
+	border-right: 1px solid #e6e6e6;
 }
 
-ul.answers>li:hover>.btn-remove {
-    display: block;
+ul.answers > li .btn-remove {
+	width: 40px;
+	display: none;
+	padding: 10px;
+	cursor: pointer;
+	align-self: center;
 }
 
-ul.answers>li.head:before {content: none}
+ul.answers > li:hover > .btn-remove {
+	display: block;
+}
 
-ul.answers>li.head {font-size: 13px; font-weight: 600; background-color: #E6E6E6;}
-ul.answers>li.head>* {padding-top: 5px;padding-bottom: 5px}
-ul.answers>li.head>.score {padding-left: 0; padding-right: 0;}
+ul.answers > li.head:before {
+	content: none;
+}
 
-ul.answers>li>input::placeholder{font-size: 13px}
+ul.answers > li.head {
+	font-size: 13px;
+	font-weight: 600;
+	background-color: #e6e6e6;
+}
+
+ul.answers > li.head > * {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+ul.answers > li.head > .score {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+ul.answers > li > input::placeholder {
+	font-size: 13px;
+}
