--- a/frontend/wpquiz.css
+++ b/frontend/wpquiz.css
@@ -1,3 +1,12 @@
+.fade-enter-active, .fade-leave-active {
+    pointer-events: auto;
+    transition: opacity 500ms;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+    pointer-events: none;
+}
+
 .wpquiz-wrapper {
     position: relative;
     overflow: hidden;
@@ -5,14 +14,6 @@
 
 .wpquiz-wrapper .wpq-question-item {
     text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    visibility: hidden;
-    width: 100%;
-    pointer-events: none;
-    transition: all 500ms;
 }
 
 .wpquiz-wrapper:not(.initialized) .wpq-question-item:first-child,
