--- a/admin/wpquiz.css
+++ b/admin/wpquiz.css
@@ -11,6 +11,17 @@
 
 .wpquiz-app .block {width: 100%; display: block}
 
+#wpquiz-app .btn-float {
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    z-index: 100;
+    font-size: 20px;
+    line-height: 26px;
+}
+
+#wpquiz-app .btn-float .dashicons {--size: 25px}
+
 .wpquiz-app input, .wpquiz-app textarea {
 	color: #333;
 	height: auto;
@@ -64,15 +75,14 @@
 .wpquiz-header {
     color: #fff;
 	min-height: 80px;
-	padding: 18px 52px;
-	margin: 0 -30px 30px -21px;
+	padding: 30px 25px 10px;
+	margin: 0 -30px 10px -21px;
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	background-color: #607d8b;
 }
 
-.wpquiz-header .title {margin: 0;}
+.wpquiz-header .title {margin: 0; font-weight: bold; font-size: 32px; color: #000;}
 
 table.wpquizes {
 	width: 100%;
@@ -160,7 +170,7 @@ table.wpquizes .meta {color: #778699; display: block; line-height: 1.4; margin-t
 .wpquiz-btn + .wpquiz-btn {margin-left: 7px}
 
 .btn-save {margin-left: 8px; padding-left: 10px}
-.btn-save .dashicons {font-size: 25px; width: 25px; height: 25px}
+.btn-save .dashicons {--size: 25px; font-size: var(--size); width: var(--size); height: var(--size)}
 .btn-save.saving .dashicons {
 	animation: saving 1s infinite ease-in-out;
 }
@@ -282,3 +292,4 @@ ul.wpquiz-repeater > li.head>.btn-add {
     border-radius: 50px;
     transform: translateY(-50%);
 }
+
